Make doner zone logo in tab as favicon

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,11 @@
 1. DONE - Make sure that there is equal spacing between each section
 
-2. Make doner zone logo in tab as favicon
+2. DONE - Make doner zone logo in tab as favicon
 
 3. Make "cancel" for full image use a svg icon instead of just an X from the font
 
 4. Make website reponsive for all screenss
 
 5. In footer, make the underline for "Deyi Rao" away and implement hover with yellow color
+
+6. Add animations to the website
