Make the main logo on the navigation bar clickable

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,8 @@
 
 3. DONE - In footer, make the underline for 'Deyi Rao' away and implement hover with yellow color
 
-4. Make website reponsive for all screenss
+4. Make the main logo on the navigation bar clickable
 
-5. Add animations to the website
+5. Make website reponsive for all screenss
+
+6. Add animations to the website
